--- a/source/_posts/博客搭建笔记.md
+++ b/source/_posts/博客搭建笔记.md
@@ -58,3 +58,9 @@ repository修改为你自己的GitHub库地址
 文章是markdown格式书写的，在编写完文件后，回到git bash在根目录下输入
 `hexo g`生成静态网页，再输入`hexo s`可以本地预览，然后输入`hexo d`上传到GitHub
 这时打开你的github.io主页就可以看到发布的文章了
+
+# 备份和迁移
+
+我们能利用github部署博客，也能使用github来保存源文件。方法是在博客根目录下新建分支hexo，然后利用该分支，将我们的Markdown文章和其它文件上传到github托管。这样hexo d推送的是main分支，而git push推送的是hexo分支，互不干扰。
+
+首先先克隆下我们在github上的博客仓库，新建分支hexo，然后只需要它的.git隐藏文件夹，其余删除，提交后将.git置于博客根目录，这样在根目录下git bash here后就能看到是hexo分支了。之后将目录下的所有添加并提交，然后推到github同名分支hexo即可。相关git操作可以看我的“git常用命令”的博客。
